--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.rumaan.academapp">
+          package="com.rumaan.academapp">
 
     <application
         android:allowBackup="true"
@@ -12,12 +12,16 @@
             android:name=".SplashPageActivity"
             android:theme="@style/SplashPageTheme">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
         <activity android:name=".MainActivity"/>
+        <activity
+            android:name=".LoginActivity"
+            android:theme="@style/SplashPageTheme">
+        </activity>
     </application>
 
 </manifest>
