--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support.constraint:constraint-layout:1.0.1'
     compile 'com.android.support:cardview-v7:25.2.0'
+    compile 'uk.co.chrisjenx:calligraphy:2.2.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
