Butterknife integration. Coz, its awesome :)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.rumaan.academapp">
+    package="com.rumaan.academapp">
 
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
     <application
         android:allowBackup="true"
@@ -14,20 +14,21 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".Activities.SplashPageActivity"
+            android:name=".activities.SplashPageActivity"
             android:theme="@style/SplashPageTheme">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Activities.MainActivity"/>
+        <activity android:name=".activities.MainActivity" />
         <activity
-            android:name=".Activities.LoginActivity"
-            android:theme="@style/SplashPageTheme">
-        </activity>
-        <activity android:name=".Activities.UserDetailsActivity"/>
+            android:name=".activities.LoginActivity"
+            android:theme="@style/SplashPageTheme"></activity>
+        <activity
+            android:name=".activities.UserDetailsActivity"
+            android:theme="@style/NoFullScreenTheme" />
     </application>
 
 </manifest>
