--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.rumaan.academapp">
+          package="com.rumaan.academapp">
 
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
 
     <application
         android:allowBackup="true"
@@ -17,18 +17,22 @@
             android:name=".activities.SplashPageActivity"
             android:theme="@style/SplashPageTheme">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".activities.MainActivity" />
+        <activity android:name=".activities.MainActivity"/>
         <activity
             android:name=".activities.LoginActivity"
             android:theme="@style/SplashPageTheme"/>
         <activity
             android:name=".activities.UserDetailsActivity"
-            android:theme="@style/NoFullScreenTheme" />
+            android:theme="@style/NoFullScreenTheme"/>
+        <activity
+            android:name=".activities.ChooseTypeActivity"
+            android:theme="@style/NoFullScreenTheme">
+        </activity>
     </application>
 
 </manifest>
