--- a/build.gradle
+++ b/build.gradle
@@ -1,25 +1,22 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
     repositories {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.4.0-alpha7'
+        classpath 'com.android.tools.build:gradle:2.3.1'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
         classpath 'com.google.gms:google-services:3.0.0'
     }
 }
-
 allprojects {
     repositories {
         jcenter()
         maven { url 'https://maven.fabric.io/public' }
     }
 }
-
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
