--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,9 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".activities.MainActivity"/>
+        <activity
+            android:name=".activities.MainActivity"
+            android:theme="@style/NoFullScreenTheme"/>
         <activity
             android:name=".activities.LoginActivity"
             android:theme="@style/SplashPageTheme"/>
