--- a/build.gradle
+++ b/build.gradle
@@ -2,18 +2,20 @@
 buildscript {
     repositories {
         jcenter()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.2'
+        classpath 'com.android.tools.build:gradle:3.0.0-alpha9'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
-        classpath 'com.google.gms:google-services:3.0.0'
+        classpath 'com.google.gms:google-services:3.1.0'
     }
 }
 allprojects {
     repositories {
         jcenter()
+        google()
         maven { url 'https://maven.fabric.io/public' }
     }
 }
